added a line that samy forgot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(expression_evaluation C)
 set(CMAKE_C_STANDARD 17)
 
 add_executable(expression_evaluation main.c)
+target_link_libraries(expression_evaluation  m)
